--- a/about.html
+++ b/about.html
@@ -14,20 +14,19 @@
 
     <main>
         <section>
-            <!-- Page-specific content goes here -->
-            <h2>Welcome to The Green Space Designing</h2>
-            <p>Explore our latest garden design projects and get inspired to create your own green space.</p>
-            <img src="images/image1.jpg" alt="Beautiful Garden">
+           
+            <p>Hi i am Monica and i am job less</p>
+           
         </section>
     </main>
 
     <footer>
         <p>Follow us on:</p>
-        <ul>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Twitter</a></li>
-        </ul>
+    <ul>
+        <li><a href="https://youtube.com/@monicakr9445?si=YrbEgc7a3el41KAU">YouTube</a></li>
+        <li><a href="https://www.instagram.com/the.green.space3?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram<a>
+        </li>
+    </ul>
     </footer>
     <script>
         // JavaScript to load header
