--- a/contact.html
+++ b/contact.html
@@ -12,21 +12,20 @@
     <!-- Load header -->
     <div id="header-placeholder"></div>
 
-    <main>
-        <section>
-            <!-- Page-specific content goes here -->
-            <h2>Welcome to The Green Space Designing</h2>
-            <p>Explore our latest garden design projects and get inspired to create your own green space.</p>
-            <img src="images/garden1.jpg" alt="Beautiful Garden">
-        </section>
+    <main style="text-align: center;">
+    <iframe 
+        src="https://docs.google.com/forms/d/e/1FAIpQLSeTPVezYfgS0OhQLNfD2N4qZYBcheO7o0aSyQ7Ag1aBFz6faw/viewform?embedded=true"
+        width="640" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+
     </main>
 
     <footer>
         <p>Follow us on:</p>
         <ul>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Twitter</a></li>
+            <li><a href="https://youtube.com/@monicakr9445?si=YrbEgc7a3el41KAU">YouTube</a></li>
+            <li><a href="https://www.instagram.com/the.green.space3?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram<a>
+            </li>
         </ul>
     </footer>
     <script>
