--- a/header.html
+++ b/header.html
@@ -1,11 +1,11 @@
 <!-- header.html -->
 <header>
-    <h1>The Green Space Designing</h1>
+    <h1>The Green Space</h1>
     <nav>
         <ul>
             <div class="nav-left">
-                <li><a href="index.html">Blogs</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="index.html">Blog</a></li>
+                <li><a href="photography.html">Photography</a></li>
                 <li><a href="designs.html">Designs</a></li>
             </div>
             <div class="nav-right">
