--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="row">
         <section class="BlogColumn">
             <h4>Pink white yellow in a flower</h4>
-            <img width="565" height="340" src="images/image4.jpg" alt="Beautiful Garden">
+            <img class="BlogImg" width="565" height="340" src="images/image4.jpg" alt="Beautiful Garden">
             <p>Can be used to try out new crops and farming techniques, dry, process, and store farm products, and provide a
                 comfortable environment for families. Home gardens can also contribute to safe waste management through
                 composting,
@@ -25,14 +25,14 @@
 
         <section class="BlogColumn">
             <h4>Orange red yellow flowers </h4>
-            <img width="565" height="340" src="images/image3.jpg" alt="Beautiful Garden">
+            <img class="BlogImg" width="565" height="340" src="images/image3.jpg" alt="Beautiful Garden">
             <p>Monastic gardens were often maintained outside of monasteries' walls and watered with complex irrigation systems. These
             gardens contained fruit trees, broadleaf vegetables, and vineyards to feed the monks and pilgrims.</p>
         </section>
 
         <section class="BlogColumn">
             <h4> How to Have a Beautiful Garden in Full Sun </h4>
-            <img width="565" height="340" src="images/image5.jpg" alt="Beautiful Garden">
+            <img class="BlogImg" width="565" height="340" src="images/image5.jpg" alt="Beautiful Garden">
             <p>Spots that soak up sunshine from sunrise to sunset are prime candidates for gardens overflowing with color, flowers and
             tasty produce. But not all plants can stand up to direct, full sun. By understanding your garden's light levels and
             meeting the needs of sun-loving plants, you can enjoy a beautiful full-sun garden worthy of a gardener's dreams. Monastic gardens were often maintained outside of monasteries' walls and watered with complex irrigation systems. These
@@ -41,7 +41,7 @@
 
         <section class="BlogColumn">
             <h4> Le Chateau du Lude </h4>
-            <img width="565" height="340" src="images/image6.jpg" alt="Beautiful Garden">
+            <img class="BlogImg"  width="565" height="340" src="images/image6.jpg" alt="Beautiful Garden">
             <p>The lower garden running along the river, was the original vegetable garden. This was moved further away to create a
             romantic French-style garden designed by Edouard André a renowned landscaper in the 19th century.
             </p>
@@ -49,7 +49,7 @@
 
         <section class="BlogColumn">
             <h4> Where are good examples of Ecological Gardens? </h4>
-            <img width="565" height="340" src="images/image7.jpg" alt="Beautiful Garden">
+            <img class="BlogImg"  width="565" height="340" src="images/image7.jpg" alt="Beautiful Garden">
             <p>The lower garden running along the river, was the original vegetable garden. This was moved further away to
                 create a romantic French-style garden designed by Edouard André a renowned landscaper in the 19th century.
             </p>
