--- a/contact.html
+++ b/contact.html
@@ -13,18 +13,19 @@
     <div id="header-placeholder"></div>
 
     <main style="text-align: center;">
-    <iframe 
-        src="https://docs.google.com/forms/d/e/1FAIpQLSeTPVezYfgS0OhQLNfD2N4qZYBcheO7o0aSyQ7Ag1aBFz6faw/viewform?embedded=true"
-        width="640" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
-
+        <div class="responsive-form">
+            <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLSeTPVezYfgS0OhQLNfD2N4qZYBcheO7o0aSyQ7Ag1aBFz6faw/viewform?embedded=true"
+                width="640" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
     </main>
 
     <footer>
         <p>Follow us on:</p>
         <ul>
             <li><a href="https://youtube.com/@monicakr9445?si=YrbEgc7a3el41KAU">YouTube</a></li>
-            <li><a href="https://www.instagram.com/the.green.space3?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram<a>
+            <li><a
+                    href="https://www.instagram.com/the.green.space3?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram<a>
             </li>
         </ul>
     </footer>
