--- a/header.html
+++ b/header.html
@@ -3,13 +3,13 @@
     <nav>
         <ul>
             <div class="nav-left">
-                <li><a href="index.html">Blog</a></li>
-                <li><a href="photography.html">Photography</a></li>
-                <li><a href="designs.html">Designs</a></li>
+                <li><a href="index.html" class="current">Blog</a></li>
+                <li><a href="photography.html" class="current">Photography</a></li>
+                <li><a href="designs.html" class="current">Designs</a></li>
             </div>
             <div class="nav-right">
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html" class="current">About</a></li>
+                <li><a href="contact.html" class="current">Contact</a></li>
             </div>
         </ul>
     </nav>
